# at-gan

./: .gitignore  LICENSE  MANIFEST.IN  README.md  pyproject.toml
.github/workflows/: release-check.yaml.yml  release.yaml
configs/: config.yaml  sweep_config.yaml
examples/: api_example.ipynb  api_example.py
src/at_gan/: __init__.py  api.py  cli.py
src/at_gan/callbacks/: console_callback.py  gan_callback.py  wand_callback.py
src/at_gan/data/: preprocessor.py
src/at_gan/engine/: core.py  sweeper.py  synthesizer.py
src/at_gan/eval/: dcr.py  plots.py  sdv.py  tstr.py
src/at_gan/models/: discriminator.py  gan.py  generator.py
src/at_gan/training/: trainer.py
src/at_gan/utils/: logger.py  paths.py
tests/: test_package.py
