[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "at-gan"
version = "0.13.0"
description = "Training Framework for Arbitrary Tabular Generative Adversarial Networks"
readme = "README.md"
authors = [
    {name = "Jonas Miesenböck", email ="jonas@miesenboeck.at"}
]
keywords = [
    "gan",
    "tabular-data",
    "synthetic-data",
    "synthetic-tabular-data",
    "tensorflow",
    "keras",
    "machine-learning",
    "generative-adversarial-network",
    "generative-adversarial-networks",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10, <3.13"
dependencies = [
    "tensorflow>=2.16.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "wandb>=0.16.0",
    "pyyaml>=6.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "typer>=0.9.0",
    "seaborn>=0.12.0",
    "matplotlib>=2.0.0",
    "sdmetrics>=0.20.0",
    "pandas-stubs~=2.3.3",
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest",
]
tf = [
    "tensorflow>=2.16.0",
]

[project.urls]
Homepage = "https://github.com/Jns-M/at-gan"
Repository = "https://github.com/Jns-M/at-gan"
Issues = "https://github.com/Jns-M/at-gan/issues"
Documentation = "https://github.com/Jns-M/at-gan#readme"

[tool.setuptools.packages.find]
where = ["src"]
include = ["at_gan*"]
exclude =  ["tests*"]

[project.scripts]
at-gan = "at_gan.cli:app"
